# hugging_face_example_STT_api

./: LICENSE  README.md  main.py  pyproject.toml
readme_assets/: example_youtube_output.json
static/: ___placeholder___
